--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.14.2",
     "swiper": "^10.0.4"
   },
