--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
+    "mapbox-gl": "^2.15.0",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.14.2",
     "swiper": "^10.0.4"
   },
