Update dependencies and import paths

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "^5.14.12",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.15.0",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
