--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.14.2",
     "swiper": "^10.0.4"
