--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookstate/core": "^4.0.1",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@mui/styles": "^5.15.2",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
     "crypto-js": "^4.2.0",
