--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
     "@mui/styles": "^5.15.2",
+    "@mui/x-data-grid": "^6.19.1",
+    "@mui/x-date-pickers": "^6.19.0",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
     "crypto-js": "^4.2.0",
