--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
+    "react-input-mask": "^2.0.4",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.14.2",
     "swiper": "^10.0.4"
