--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
     "lodash": "^4.17.21",
