--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
     "react-map-gl": "^7.1.6",
+    "react-payment-inputs": "^1.1.9",
     "react-router-dom": "^6.14.2",
     "swiper": "^10.0.4"
   },
