refactor: Update currency formatting and add lazy loading to Picture component
- Refactor the currency.js file to include a new function for formatting numbers.
- Add the loading="lazy" attribute to the Picture component in Picture.jsx for improved performance.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@google-pay/button-react": "^3.1.0",
     "@hookstate/core": "^4.0.1",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
@@ -25,6 +26,7 @@
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "mapbox-gl": "^2.15.0",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
