--- a/package.json
+++ b/package.json
@@ -10,46 +10,46 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@google-pay/button-react": "^3.1.0",
-    "@hookstate/core": "^4.0.1",
-    "@mui/icons-material": "^5.14.12",
-    "@mui/material": "^5.14.12",
-    "@mui/styles": "^5.15.2",
-    "@mui/x-data-grid": "^6.19.1",
-    "@mui/x-date-pickers": "^6.19.0",
-    "@tanstack/react-query": "^4.32.0",
-    "axios": "^1.4.0",
-    "crypto-js": "^4.2.0",
-    "date-fns": "^2.30.0",
-    "firebase": "^10.1.0",
-    "framer-motion": "^10.15.0",
-    "lodash": "^4.17.21",
-    "lottie-react": "^2.4.0",
-    "mapbox-gl": "^2.15.0",
-    "popmotion": "^11.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-hot-toast": "^2.4.1",
-    "react-input-mask": "^2.0.4",
-    "react-map-gl": "^7.1.6",
-    "react-payment-inputs": "^1.1.9",
-    "react-router-dom": "^6.14.2",
-    "swiper": "^10.0.4"
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@google-pay/button-react": "3.1.0",
+    "@hookstate/core": "4.0.1",
+    "@mui/icons-material": "5.14.12",
+    "@mui/material": "5.14.12",
+    "@mui/styles": "5.15.2",
+    "@mui/x-data-grid": "6.19.1",
+    "@mui/x-date-pickers": "6.19.0",
+    "@tanstack/react-query": "4.32.0",
+    "axios": "1.4.0",
+    "crypto-js": "4.2.0",
+    "date-fns": "2.30.0",
+    "firebase": "10.1.0",
+    "framer-motion": "10.15.0",
+    "lodash": "4.17.21",
+    "lottie-react": "2.4.0",
+    "mapbox-gl": "2.15.0",
+    "popmotion": "11.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-helmet-async": "1.3.0",
+    "react-hot-toast": "2.4.1",
+    "react-input-mask": "2.0.4",
+    "react-map-gl": "7.1.6",
+    "react-payment-inputs": "1.1.9",
+    "react-router-dom": "6.14.2",
+    "swiper": "10.0.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@vitejs/plugin-react": "4.0.3",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.45.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.3",
+    "postcss": "8.4.27",
+    "tailwindcss": "3.3.3",
+    "vite": "4.4.5"
   }
 }
